minor overflow fix

--- a/src/css/layout.css
+++ b/src/css/layout.css
@@ -23,6 +23,7 @@ body {
   height: 100%;
   width: 100%;
   box-sizing: border-box;
+  overflow-x: hidden;
 }
 .wrapper {
   /* height: 100%; */
